<resources>
    <string name="app_name">Kharetati</string>
    <string name="title_welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="internet_connection_problem1">Please check your internet connection and try again</string>
    <string name="lbl_warning">Warning</string>
    <string name="ok">Ok</string>
    <string name="forgot_username_password">Forgot Password</string>
    <string name="rememberme">Remember Me</string>
    <string name="open_makani_confirm">Are you sure you want to navigate to Makani?</string>
    <string name="or">OR</string>
    <string name="cancel">Cancel</string>
    <string name="createAccount">Create an Account</string>
    <string name="signin_as_guest">Login as Guest</string>
    <string name="login_uaepass">Login with UAE PASS</string>
    <string name="username">Enter Username/ Email Address<font fgcolor='#a31533'>*</font></string>
    <string name="password">Enter Password<font fgcolor='#a31533' >*</font></string>
    <string name="textOff">English</string>
    <string name="textOn">عربى</string>
    <string name="PLEASE_ENTER_PLOTNUMBER">Please enter plot number</string>
    <string name="valid_plot_number">Please enter valid plot number</string>
    <string name="plot_does_not_exist">Plot number does not exist</string>
    <string name="click_on_map">Please click on plot to proceed</string>
    <string name="register">Do you want to create an account?</string>
    <string name="forgot_password">Do you want to reset your username or password?</string>
    <string name="loading">Loading...</string>
    <string name="not_now">Close</string>
    <string name="tap_to_choose">Tap to choose area</string>
    <string name="invalid_area">Please select the area</string>
    <string name="no_valid_land">Please enter a valid title deed number</string>
    <string name="community_error">Error while fetching community</string>
    <string name="please_enter_land">Please enter the title deed number</string>
    <string name="username_and_password">Please enter your username and password</string>
    <string name="enter_username">Please enter username/ email address</string>
    <string name="enter_password">Please enter your password</string>
    <string name="wrong_username_password">Wrong username or password</string>
    <string name="server_connect_error">Unable to Connect to Server</string>
    <string name="error_response">An error occurred while fetching data</string>
    <string name="invalid_makani">Please enter a valid makani number</string>
    <string name="enter_makani_number">Enter your Makani Number</string>
    <string name="pay">Pay</string>
    <string name="paid">Paid</string>
    <string name="LBL_REQUEST_STATUS">Request Status:</string>
    <string name="LBL_DATE_TIME">Date:</string>
    <string name="parcelid">Parcel ID</string>
    <string name="voucher_num">Voucher Number</string>
    <string name="voucher_num_mymaps">Voucher Number:</string>
    <string name="amount">Amount</string>
    <string name="payment_channels">Payment Channels</string>
    <string name="pay_now">PAY NOW</string>
    <string name="payment_warning">* The payment need to be done within 5 days, otherwise the request will be cancelled.</string>
    <string name="done">Done</string>
    <string name="request_num">Request Number</string>
    <string name="request_details">Request Details</string>
    <string name="plot_no">Plot No: </string>
    <string name="area">Area: </string>
    <string name="favourite_deleted">Bookmark has been successfully deleted</string>
    <string name="NO_FAVOURITE_PLOTS_FOUND">Currently no favourites are available</string>
    <string name="confirmation_delete">Are you sure you want to delete?</string>
    <string name="select">Select</string>
    <string name="land_owned_By_person">Land owned by person</string>
    <string name="land_owned_By_company">Land owned by company</string>
    <string name="download_noc_letter"><u>Download NOC Letter</u></string>
    <string name="applicant_details">Applicant details</string>
    <string name="mobile_number_9715xxxxxxxx">9715xxxxxxxx</string>
    <string name="view_noc_letter_txt">View NOC Letter to Provide Similar Template for the Letter</string>
    <string name="pay_later">Pay By Other Channels</string>
    <string name="land_ownership_certificate">Latest site plan issued by Land Department or Dubai Municipality*</string>
    <string name="owner_emiratesID">Owner Emirates ID *</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="isResident">Are you the resident</string>
    <string name="isOwner">Are you the owner</string>
    <string name="letter_from_owner">NOC Certificate (Letter from owner)</string>
    <string name="NOUPLOADPASSPORTALERT">Please upload the Passport</string>
    <string name="NO_NOC_CERTIFICATE_ALERT">Please upload the NOC Certificate(Letter from owner)</string>
    <string name="NOEMIDFRONTALERT">Please Upload Emirates ID Front</string>
    <string name="NOEMIDBACKALERT">Please Upload Emirates ID Back</string>
    <string name="NOLANDOWNERSHIPCERTIFICATEALERT">Please upload the Land Owner Ship Certificate</string>
    <string name="passport">Passport(Personal Details)*</string>
    <string name="view_image">View</string>
    <string name="change">Change</string>
    <string name="visa_passport">Passport (Edbara or Visa)*</string>
    <string name="company_license">Company License Copy*</string>
    <string name="enter_your_mobile">Enter your mobile number</string>
    <string name="signed_noc_owner">Signed NOC Letter From the Owner*</string>
    <string name="please_enter_email_address">Please Enter Your Email Address</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="choose_label">Select</string>
    <string name="default_dir" translatable="false">/sdcard</string>
    <string name="label_parent_directory">Parent Directory</string>
    <string name="last_edit">Last edited: </string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="label_parent_dir" translatable="false">...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_apply">Apply</string>
    <string name="hint_offset">eg. /mnt/sdcard/Music or leave empty</string>
    <string name="label_offset_directory">Offset Directory</string>
    <string name="hint_root_dir">eg. /mnt/sdcard or leave empty</string>
    <string name="label_root_directory">Root Directory</string>
    <string name="hint_extensions">eg. jpg, zip, rar or leave empty</string>
    <string name="label_single">Single</string>
    <string name="label_multiple">Multiple</string>
    <string name="label_selection_mode">Selection Mode</string>
    <string name="label_selection_type">Selection Type</string>
    <string name="label_file">File</string>
    <string name="label_directory">Directory</string>
    <string name="label_files_and_directories">Files and Directories</string>
    <string name="label_extensions">Filter Extensions(Seperate with Commas, Don\'t use dots)</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="Crop">Choose</string>
    <string name="CANCEL">Cancel</string>
    <string name="empty_document" >Please upload the required documents</string>
    <string name="choose_image">Please choose the Image</string>
    <string name="fields_are_required">Please enter all the required fields</string>
    <string name="enter_valid_email">Please enter valid Email Address</string>
    <string name="mobile_validation">Please enter a valid mobile number</string>
    <string name="CHOOSETHEOPTION">Choose the option</string>
    <string name="view">View Image</string>
    <string name="select_photo_gallery">Select photo from gallery</string>
    <string name="capture_photo_camera">Capture photo from camera</string>
    <string name="choose_from_explorer">Choose from File chooser</string>
    <string name="delivery_by_courier">Delivery by courier</string>
    <string name="makani_no">Makani No.</string>
    <string name="street_adress">Street Address</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="emirate">Emirate*</string>
    <string name="villa_flat_building_no">Villa/ Flat/ Building No.</string>
    <string name="building_name">Building Name</string>
    <string name="nearest_landmark">Nearest Landmark</string>
    <string name="reciever_name">Receiver Name*</string>
    <string name="mobile_no">Mobile No*</string>
    <string name="email_address">Email Address*</string>
    <string name="courier_alert_title">Do you want to receive the site plan by courier?</string>
    <string name="address_for_delivery">Address for Delivery</string>
    <string name="navback">Back</string>
    <string name="confirmation_openlink">Are you sure you want to open this link?</string>
    <string name="select_emirate">Please select Emirate</string>
    <string name="deatails_saved"> All the details are saved successfully</string>
    <string name="valid_doc">Please upload the valid documents</string>
    <string name="try_kharetati_app">Download Kharetati App</string>
    <string name="kharetati_app">Kharetati App</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="msg_rate_us">We value your feedback. Kindly rate us in the store</string>
    <string name="rate_it">Rate now</string>
    <string name="remindme">Remind me later</string>
    <string name="thank_you_feedback">Thank you for your feedback!</string>
    <string name="open_in_app_store">Open in App Store</string>
    <string name="email">Email </string>
    <string name="email_hint">Email*</string>
    <string name="feedback_subject">Kharetati Feedback</string>
    <string name="Contact_us_Call_permission">"Kharetati needs permission to make calls to Dubai Municipality."</string>
    <string name="you_are_about_to_call">Call </string>
    <string name="phone">Phone</string>
    <string name="Website">Website</string>
    <string name="Chat">live chat</string>
    <string name="Live_chat_with_our_call_center">Live chat with our call center</string>
    <string name="please_enter_phone">Please enter your phone number</string>
    <string name="social_network">Social Media</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="email2">Email</string>
    <string name="feedback">Feedback</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="send_your_feedback_about_the_app">Send your feedback about Kharetati</string>
    <string name="feedback_name">Name *</string>
    <string name="profile_name">Name</string>
    <string name="subject">Subject *</string>
    <string name="feedback_description">Description *</string>
    <string name="description_fav">Description *</string>
    <string name="feedback_mobile_number">Phone *</string>
    <string name="submit">Submit</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="search">Search</string>
    <string name="enter_valid_username">Please enter valid username</string>
    <string name="CANCELTRANSACTIONALERT">Are you sure you want to cancel the transaction?</string>
    <string name="exit_alert_message">Are you sure you want to exit from the application?</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="SHAREKHARETATIAPP">Share App</string>
    <string name="RATEUS">Rate Us</string>
    <string name="ABOUTUS">About Us</string>
    <string name="FAQMENU">FAQs</string>
    <string name="TERMSANDCONDITIONS">Terms and conditions</string>
    <string name="ACCESSIBILITY">Accessibility</string>
    <string name="INTROHELP">Help</string>
</resources>