<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="fragmentPayVM"
            type="dm.sime.com.kharetati.view.viewModels.PayViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="48dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/rootView"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layoutDirection="locale">
        <TextView
            style="@style/font_large_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:textAlignment="center"
            android:layoutDirection="locale"
            android:text="@string/applicant_details"
            android:textColor="@color/gray_text_color"
            android:textDirection="locale"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/font_medium_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <EditText
                style="@style/font_medium_bold"
                android:id="@+id/et_emailaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/please_enter_email_address"
                android:inputType="text"
                android:maxLength="50"
                android:textAlignment="center"
                android:textColor="@color/gray_text_color"
                android:textDirection="locale" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--android:digits="0123456789١٢٣٤٥٦٧٨٩١٠"-->
        <EditText
            style="@style/font_medium_bold"
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/mobile_number_9715xxxxxxxx"
            android:inputType="number"
            android:maxLength="12"
            android:textAlignment="center"
            android:textColor="@color/gray_text_color"
            android:textDirection="locale" />


        <LinearLayout
            android:id="@+id/payButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                style="@style/font_medium_bold"
                android:id="@+id/payNow"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/pay_now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="800"/>

            <Button
                style="@style/font_medium_bold"
                android:id="@+id/payLater"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/pay_later"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="800" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</layout>