<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="DeliveryDetailVM"
            type="dm.sime.com.kharetati.view.viewModels.DeliveryDetailViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id ="@+id/linearLayout"
            android:orientation="vertical"
            android:layout_marginBottom="100dp">
            <CheckBox
                android:id="@+id/deliveryByCourier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop = "8dp"
                android:layout_marginBottom = "8dp"
                android:layout_gravity="start|center_vertical"
                android:gravity="start|center_vertical"
                android:text="@string/delivery_by_courier"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reciever_name"
                android:paddingLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-7dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_text_color"
                android:textStyle="bold"
                android:textDirection="locale"
                android:paddingStart="3dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_recievername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="text"
                    android:maxLength="255"
                    android:textAlignment="viewStart"
                    android:textColor="@color/gray_text_color"
                    android:textDirection="locale" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-7dp"
                android:paddingLeft="3dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_text_color"
                android:textStyle="bold"
                android:textDirection="locale"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_emailaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="text"
                    android:textColor="@color/gray_text_color"
                    android:textDirection="locale"
                    android:textAlignment="viewStart"
                    android:maxLength="50"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-7dp"
                android:paddingLeft="3dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_text_color"
                android:textStyle="bold"
                android:textDirection="locale"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/mobile_number_9715xxxxxxxx"
                    android:maxLength="12"
                    android:textDirection="locale"
                    android:textColor="@color/gray_text_color"
                    android:textAlignment="viewStart"
                    android:gravity="start" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/makani_no"
                android:paddingLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-7dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_text_color"
                android:textStyle="bold"
                android:textDirection="locale"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_makani"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLength="10"
                    android:textColor="@color/gray_text_color"
                    android:inputType="number"
                    android:textDirection="locale"
                    android:textAlignment="viewStart"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emirate"
                android:paddingLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-7dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_text_color"
                android:textStyle="bold"
                android:textDirection="locale" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/et_emirates"
                    android:layout_marginTop="5dp"
                    android:gravity="start"
                    android:textColor="@color/gray_text_color"
                    android:textAlignment="viewStart"
                    android:textDirection="locale" >
            </Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/villa_flat_building_no"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-7dp"
                android:paddingLeft="3dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_text_color"
                android:textStyle="bold"
                android:textDirection="locale"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_villa_building_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="text"
                    android:textColor="@color/gray_text_color"
                    android:textAlignment="viewStart"
                    android:textDirection="locale"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/building_name"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-7dp"
                android:paddingLeft="3dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_text_color"
                android:textStyle="bold"
                android:textDirection="locale"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_buildingName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="text"
                    android:textColor="@color/gray_text_color"
                    android:textAlignment="viewStart"
                    android:textDirection="locale" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street_adress"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-7dp"
                android:paddingLeft="3dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_text_color"
                android:textStyle="bold"
                android:textDirection="locale"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                >

                <EditText
                    android:id="@+id/et_streetAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:singleLine="true"
                    android:textColor="@color/gray_text_color"
                    android:textAlignment="viewStart"
                    android:textDirection="locale" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mailing_address"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-7dp"
                android:paddingLeft="3dp"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_text_color"
                android:textStyle="bold"
                android:textDirection="locale"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/gray_text_color"
                    android:textAlignment="viewStart"
                    android:inputType="textPostalAddress"
                    android:maxLines="2"
                    android:textDirection="locale" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nearest_landmark"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:layout_marginBottom="-7dp"
                android:paddingLeft="3dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray_text_color"
                android:textStyle="bold"
                android:textDirection="locale"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/gray_text_color"
                    android:textAlignment="viewStart"
                    android:textDirection="locale" />
            </com.google.android.material.textfield.TextInputLayout>


<!--
            <Button
                android:id="@+id/btn_submitDetails"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_edittext_gradient"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/save"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white" />
-->

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>